# public/docs/api-docs.json
@@ -403,59 +403,6 @@
                 ]
             }
         },
-        "/api/posts/{id}/comments": {
-            "post": {
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ],
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "body": {
-                                        "default": "",
-                                        "example": "T대학 병원을 향하고 달렸소. 내가 오랫동안 있던 동경, 청춘의 꿈 같은 기억이 있는 동경의 거리를 보는지 안 보는지 몰랐소. 내 가슴은 놀라움과 슬픔과 절망으로 찼던 것이오. T대학 병원 S내과 X호 병실이 정임의 병실이라는 것은 아까 키 큰 말이요, 한 필은 키 큰 여학생이 마음에 짚일 뿐이오. 생각해 보면 그 여학생이 일어나서 통통통 걸어간 지.",
-                                        "type": "string"
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                },
-                "summary": "posts.comments.create",
-                "tags": [
-                    "posts"
-                ]
-            }
-        },
-        "/api/posts/{id}/comments/{comment_id}": {
-            "delete": {
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
-                    }
-                },
-                "summary": "posts.comments.destroy",
-                "tags": [
-                    "posts"
-                ]
-            }
-        },
         "/api/attachments": {
             "post": {
                 "security": [
@@ -497,6 +444,197 @@
                 "summary": "attachments.create",
                 "tags": [
                     "attachments"
+                ]
+            }
+        },
+        "/api/comments": {
+            "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "commentable_type",
+                        "in": "query",
+                        "description": "commentable_type Ex. posts",
+                        "required": true,
+                        "type": "string",
+                        "default": "posts"
+                    },
+                    {
+                        "name": "commentable_id",
+                        "in": "query",
+                        "description": "commentable_type",
+                        "required": true,
+                        "type": "integer",
+                        "default": 1
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "page number",
+                        "required": false,
+                        "type": "integer",
+                        "default": 1
+                    },
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "description": "per_page",
+                        "required": false,
+                        "type": "integer",
+                        "default": 15
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "summary": "comments.index",
+                "tags": [
+                    "comments"
+                ]
+            },
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "commentable_type": {
+                                        "default": "",
+                                        "example": "posts",
+                                        "type": "string"
+                                    },
+                                    "commentable_id": {
+                                        "default": null,
+                                        "example": 1,
+                                        "type": "integer"
+                                    },
+                                    "body": {
+                                        "default": "",
+                                        "example": "comment write !!~",
+                                        "type": "string"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "summary": "comments.create",
+                "tags": [
+                    "comments"
+                ]
+            }
+        },
+        "/api/comments/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "summary": "comments.destroy",
+                "tags": [
+                    "comments"
+                ]
+            }
+        },
+        "/api/likes": {
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "likeable_type": {
+                                        "default": "",
+                                        "example": "posts",
+                                        "type": "string"
+                                    },
+                                    "likeable_id": {
+                                        "default": null,
+                                        "example": 1,
+                                        "type": "integer"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "summary": "좋아요",
+                "tags": [
+                    "likes"
+                ]
+            },
+            "delete": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "likeable_type": {
+                                        "default": "",
+                                        "example": "posts",
+                                        "type": "string"
+                                    },
+                                    "likeable_id": {
+                                        "default": null,
+                                        "example": 1,
+                                        "type": "integer"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "summary": "좋아요 취소",
+                "tags": [
+                    "likes"
                 ]
             }
         }
